# CppModulesSimpleExamples

./: .gitignore  README.md
ModuleExeAndShared/: CMakeLists.txt  CMakePresets.json
ModuleExeAndShared/exe/: CMakeLists.txt  main.cpp
ModuleExeAndShared/foobar/: Bar.cpp  Bar.ixx  CMakeLists.txt  Foo.ixx
ModuleExeAndSharedPartionsVsSubModules/: CMakeLists.txt
ModuleExeAndSharedPartionsVsSubModules/exe/: CMakeLists.txt  main.cpp
ModuleExeAndSharedPartionsVsSubModules/fizzbuzz/: Buzz.cpp  Buzz.ixx  CMakeLists.txt  Doh.ixx  Fizz.cpp  Fizz.ixx  Module.ixx
ModuleExeAndSharedPartionsVsSubModules/foobar/: Bar.cpp  Bar.ixx  CMakeLists.txt  Foo.cpp  Foo.ixx  Module.ixx  huh.ixx
ModulesExe/: Bar.ixx  CMakeLists.txt  Foo.cpp  Foo.ixx  main.cpp
SimpleExe/: Bar.h  CMakeLists.txt  Foo.cpp  Foo.h  main.cpp
SimpleExeAndShared/: CMakeLists.txt
SimpleExeAndShared/exe/: CMakeLists.txt  main.cpp
SimpleExeAndShared/foobar/: Bar.cpp  Bar.h  CMakeLists.txt  Foo.h
SimpleExeAndShared/shared/: Bar.h  CMakeLists.txt  Foo.h
